--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
-    "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
+    "@toktok/eslint-config": "workspace:*",
+    "@toktok/typescript-config": "workspace:*",
     "prettier": "^3.2.5",
     "turbo": "^2.4.4"
   },
   "packageManager": "pnpm@8.15.5",
   "engines": {
-    "node": ">=18"
+    "node": ">=20"
   }
 }
